# BankAccountSystem

./: .gitignore  BankAccountSystem_en_BI.ts  CMakeLists.txt  README.md  bankaccount.cpp  bankaccount.h  createaccountdialog.cpp  createaccountdialog.h  createaccountdialog.ui  createaccountdialog.ui.autosave  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
bankaccount/: CMakeLists.txt
